--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
+      <div class="col-md-12 jumbotron text-center" style="background-image: url(lab.jpg);">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
@@ -32,20 +31,25 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5">
-        <div id="bar"></div>
+      <div class="col-md-5" >
+        <div id="bar" style="background-color: #d3d3d3;"></div>
       </div>
       <div class="col-md-5">
-        <div id="gauge"></div>
+        <div id="gauge" style="background-color: #d3d3d3;"></div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="bubble"></div>
+        <div id="bubble" style="background-color: #d3d3d3;"></div>
       </div>
     </div>
   </div>
-
+  <style> .panel {border-color: coral}  </style>
+  <style> .panel-primary>.panel-heading {background-color: coral; border-color: coral;} </style>
+  <style> body{background-image: url("lab.jpg")}</style>
+  <style> .well{background-color: coral}</style>
+  <style> .jumbotron h1 {color: black; font-weight: 800;}</style>
+  <style> .jumbotron p {color: black; font-weight: 800;}</style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="plots.js"></script>
